// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSession should create a new session 1`] = `
Session {
  "_accountId": null,
  "_agent": Object {
    "browser": "browser",
    "geoIp": Object {
      "ip": "geo",
    },
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "email": "email@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": "encryptSessionOTP",
    "redirectUri": "https://lindorm.io",
    "responseType": "token",
  },
  "_clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": null,
        "agent": Object {
          "browser": "browser",
          "geoIp": Object {
            "ip": "geo",
          },
          "os": "os",
          "platform": "platform",
          "source": "source",
          "version": "version",
        },
        "authenticated": false,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "email": "email@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": "encryptSessionOTP",
          "redirectUri": "https://lindorm.io",
          "responseType": "token",
        },
        "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
        "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "pin_code",
        "refreshId": null,
        "scope": "default",
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "pin_code",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": null,
  "_scope": "default",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`createSession should create a new session 2`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [
        Object {
          "accountId": null,
          "agent": Object {
            "browser": "browser",
            "geoIp": Object {
              "ip": "geo",
            },
            "os": "os",
            "platform": "platform",
            "source": "source",
            "version": "version",
          },
          "authenticated": false,
          "authorization": Object {
            "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "codeMethod": "sha256",
            "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "email": "email@lindorm.io",
            "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
            "otpCode": "encryptSessionOTP",
            "redirectUri": "https://lindorm.io",
            "responseType": "token",
          },
          "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
          "created": 2020-01-01T07:00:00.000Z,
          "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "session_created",
              "payload": Object {
                "accountId": null,
                "agent": Object {
                  "browser": "browser",
                  "geoIp": Object {
                    "ip": "geo",
                  },
                  "os": "os",
                  "platform": "platform",
                  "source": "source",
                  "version": "version",
                },
                "authenticated": false,
                "authorization": Object {
                  "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
                  "codeMethod": "sha256",
                  "deviceChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
                  "email": "email@lindorm.io",
                  "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
                  "otpCode": "encryptSessionOTP",
                  "redirectUri": "https://lindorm.io",
                  "responseType": "token",
                },
                "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
                "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
                "expires": 2020-01-01T07:00:00.000Z,
                "grantType": "pin_code",
                "refreshId": null,
                "scope": "default",
              },
            },
          ],
          "expires": 2020-01-01T07:00:00.000Z,
          "grantType": "pin_code",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "refreshId": null,
          "scope": "default",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`createSession should create a new session without optional values 1`] = `
Session {
  "_accountId": null,
  "_agent": Object {
    "browser": "browser",
    "geoIp": Object {
      "ip": "geo",
    },
    "os": "os",
    "platform": "platform",
    "source": "source",
    "version": "version",
  },
  "_authenticated": false,
  "_authorization": Object {
    "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
    "codeMethod": "sha256",
    "deviceChallenge": null,
    "email": "other@lindorm.io",
    "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
    "otpCode": null,
    "redirectUri": "https://lindorm.io",
    "responseType": "code",
  },
  "_clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "session_created",
      "payload": Object {
        "accountId": null,
        "agent": Object {
          "browser": "browser",
          "geoIp": Object {
            "ip": "geo",
          },
          "os": "os",
          "platform": "platform",
          "source": "source",
          "version": "version",
        },
        "authenticated": false,
        "authorization": Object {
          "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
          "codeMethod": "sha256",
          "deviceChallenge": null,
          "email": "other@lindorm.io",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "otpCode": null,
          "redirectUri": "https://lindorm.io",
          "responseType": "code",
        },
        "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
        "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
        "expires": 2020-01-01T07:00:00.000Z,
        "grantType": "pin_code",
        "refreshId": null,
        "scope": "default edit",
      },
    },
  ],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "pin_code",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": null,
  "_scope": "default edit",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`createSession should create a new session without optional values 2`] = `
Object {
  "authentication": Object {
    "session": Object {
      "data": Array [
        Object {
          "accountId": null,
          "agent": Object {
            "browser": "browser",
            "geoIp": Object {
              "ip": "geo",
            },
            "os": "os",
            "platform": "platform",
            "source": "source",
            "version": "version",
          },
          "authenticated": false,
          "authorization": Object {
            "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
            "codeMethod": "sha256",
            "deviceChallenge": null,
            "email": "other@lindorm.io",
            "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
            "otpCode": null,
            "redirectUri": "https://lindorm.io",
            "responseType": "code",
          },
          "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
          "created": 2020-01-01T07:00:00.000Z,
          "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "session_created",
              "payload": Object {
                "accountId": null,
                "agent": Object {
                  "browser": "browser",
                  "geoIp": Object {
                    "ip": "geo",
                  },
                  "os": "os",
                  "platform": "platform",
                  "source": "source",
                  "version": "version",
                },
                "authenticated": false,
                "authorization": Object {
                  "codeChallenge": "H4LnTn7e1DltMsohJgIeKSNgpvppJ1qP6QRRD9Ai1pw=",
                  "codeMethod": "sha256",
                  "deviceChallenge": null,
                  "email": "other@lindorm.io",
                  "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
                  "otpCode": null,
                  "redirectUri": "https://lindorm.io",
                  "responseType": "code",
                },
                "clientId": "9ba5e0c5-f2aa-4706-a27d-66369b547b0b",
                "deviceId": "2122b49f-3dc0-46c2-9a8b-6cec5e26a389",
                "expires": 2020-01-01T07:00:00.000Z,
                "grantType": "pin_code",
                "refreshId": null,
                "scope": "default edit",
              },
            },
          ],
          "expires": 2020-01-01T07:00:00.000Z,
          "grantType": "pin_code",
          "id": "be3a62d1-24a0-401c-96dd-3aff95356811",
          "refreshId": null,
          "scope": "default edit",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
